Bug 16137 - Max-Forwards MUST NOT be added
Summary: Max-Forwards MUST NOT be added
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy (show other bugs)
Version: 2.0-HEAD
Hardware: All All
: P3 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL: http://coad.measurement-factory.com/c...
Keywords:
Depends on:
Blocks: 43454
  Show dependency tree
 
Reported: 2003-01-15 20:35 UTC by Co-Advisor
Modified: 2008-01-19 09:00 UTC (History)
0 users



Attachments
test case trace (6.02 KB, text/html)
2003-01-15 20:36 UTC, Co-Advisor
Details
Patch to fix this (1.88 KB, patch)
2003-04-15 19:51 UTC, Graham Leggett
Details | Diff
successful test case (7.31 KB, text/html)
2003-04-28 15:40 UTC, Co-Advisor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Co-Advisor 2003-01-15 20:35:48 UTC
Looks like a possible RFC 2616 MUST violation.  HTTP
specifically does not allow intermediaries to add
Max-Forwards header (see bug report URL or links from 
the test case trace for RFC quotes). 

A different way to detect loops should be used 
(Via: or an extension header).

See attached trace(s) for details and ways to reproduce
the violation mentioned above.

Test case IDs in the trace link to human-oriented test case
description and RFC quotes, if available.
Comment 1 Co-Advisor 2003-01-15 20:36:23 UTC
Created attachment 4447 [details]
test case trace
Comment 2 Graham Leggett 2003-04-15 19:51:45 UTC
Created attachment 5843 [details]
Patch to fix this
Comment 3 Graham Leggett 2003-04-15 19:52:23 UTC
Please test the attached patch to see if it fixes this problem.
Comment 4 Co-Advisor 2003-04-24 22:25:01 UTC
FYI: I tried to test the patch, but I am getting apparently
unrelated coredumps when using fresh code from CVS (Apache/2.1.0-dev).
I will try again later in hope that CVS HEAD code becomes more stable.
If there is a particular snaphot I should try instead of HEAD, please
provide instructions.
Comment 5 Jeff Trawick 2003-04-26 17:48:56 UTC
Mr. Co-Advisor,

Regarding your comment that something in 2.1-dev is causing segfaults...

Some code known to lead to segfaults in 2.1-dev was backed out last night,
so you may wish to cvs update and then again try the recommended patch for
this problem.
Comment 6 Co-Advisor 2003-04-28 15:39:23 UTC
CVS HEAD updated around 'Mon Apr 28 15:00:00 UTC 2003', with
the attached patch applied, does not exhibit the problem. Looks
like we can consider the bug fixed. I will attach the successful
test case log.
Comment 7 Co-Advisor 2003-04-28 15:40:20 UTC
Created attachment 6049 [details]
successful test case
Comment 8 Co-Advisor 2005-06-06 22:59:17 UTC
Reopening the bug because httpd-2.0.54 is still 
adding Max-Forwards. The patch that fixed the
problem does not seem to be commited. 

If the patch was backed out, I apologize 
(but let's mark this bug report as WONT FIX then).
Comment 9 Nick Kew 2007-10-01 17:42:07 UTC
Fixed in trunk in r581117:
* Will default to strict protocol-compliant
* Old behaviour is available, controlled (as before) by ProxyMaxForwards directive.
Comment 10 Nick Kew 2007-10-07 07:16:04 UTC
Fixed in r582635.