Default to NOT setting Max-Forwards in violation of RFC2616 Leave old behaviour as a configuration option (ProxyMaxForwards) PR 16137

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@581117 13f79535-47bb-0310-9956-ffa450edef68